fix bug: video display overflow hidden

--- a/src/css/css_styles.css
+++ b/src/css/css_styles.css
@@ -477,9 +477,9 @@ div.monitorview
 
 div.cameraview
 {
-	display:block;
-	overflow:auto;
-	
+    display:block;
+    overflow:hidden;
+    
 }
 
 div#andruavUnits {
